Remove Sets.haveOverlap and replace it by Collections.disjoint